# sharpSAT

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README-MaxSharpSat.txt  README.md  makefile  rebuild.sh  setupdev.sh
CMake/: sharpSATConfig.cmake.in
Release/: makefile  objects.mk  sources.mk  subdir.mk
Release/src/: subdir.mk
Release/src/component_types/: subdir.mk
include/sharpSAT/: alt_component_analyzer.h  component_analyzer.h  component_cache.h  component_management.h  containers.h  instance.h  new_component_analyzer.h  primitive_types.h  solver.h  solver_config.h  stack.h  statistics.h  structures.h
include/sharpSAT/component_types/: base_packed_component.h  cacheable_component.h  component.h  component_archetype.h  difference_packed_component.h  simple_packed_component.h  simple_unpacked_component.h
include/sharpSAT/containers/: binary_heap.h
src/: CMakeLists.txt  alt_component_analyzer.cpp  alt_component_analyzer.h  basic_types.cpp  basic_types.h  cache_structures.h  component_analyzer.cpp  component_analyzer.h  component_cache-inl.h  component_cache.cpp  component_cache.h  component_management-inl.h  component_management.cpp  component_management.h  component_types-inl.h  component_types.cpp  component_types.h  containers.h  instance.cpp  instance.h  main.cpp  new_component_analyzer.cpp  new_component_analyzer.h  primitive_types.h  solver.cpp  solver.h  solver_config.h  stack.h  statistics.cpp  statistics.h  structures.h
src/component_types/: CMakeLists.txt  base_packed_component.cpp  base_packed_component.h  cacheable_component.h  component.h  component_archetype.cpp  component_archetype.h  difference_packed_component.h  simple_packed_component.h  simple_unpacked_component.h
test/: comparetimes.py  numbercheck.py  numberchecks.py  processcall.py  sharpSAT  taketimes.py  timecompare.py
test/benchmark/: README.md  easy.txt
test/benchmark/ijcai07/circuit/: 3bitadd_32.cnf
test/benchmark/ijcai07/clqcolor/: fclqcolor-18-14-11.cnf  fclqcolor-20-15-12.cnf
test/benchmark/ijcai07/langford/: lang12.cnf  lang15.cnf  lang19.cnf  lang20.cnf  lang23.cnf  lang24.cnf  lang27.cnf
test/benchmark/ijcai07/latinsq/: ls10-normalized.cnf  ls11-normalized.cnf  ls12-normalized.cnf  ls13-normalized.cnf  ls14-normalized.cnf  ls15-normalized.cnf  ls16-normalized.cnf  ls8-normalized.cnf  ls9-normalized.cnf
test/benchmark/ijcai07/ramsey/: 20_rd_r45.cnf  23_rd_r45.cnf
test/benchmark/ijcai07/random/: wff.3.100.150.cnf  wff.3.100.150.txt  wff.3.150.525.cnf  wff.3.150.525.txt  wff.4.100.500.cnf
test/benchmark/ijcai07/schur/: 5_100_sd_schur.cnf  5_140_sd_schur.cnf
test/benchmark/nips2011/: 2bitmax_6.cnf  LS5_firstr.cnf  LS6_diag.cnf  LS6_firstr.cnf  LS7_diag.cnf  LS7_firstrow.cnf  grid32.cnf  grid40.cnf  ls8-normalized.cnf  ls8-simplified2.cnf  ls8-simplified4.cnf  ls8-simplified5.cnf  wff.3.100.150.cnf  wff.3.100.150.txt  wff.3.150.525.cnf  wff.3.150.525.txt  wff.4.100.500.cnf
test/benchmark/pmc/Configuration/mercedes/: C129_FR.cnf  C129_FR.txt  C140_FC.cnf  C140_FC.txt  C140_FV.cnf  C140_FV.txt  C140_FW.cnf  C140_FW.txt  C163_FW.cnf  C163_FW.txt  C168_FW.cnf  C168_FW.txt  C169_FV.cnf  C169_FV.txt  C170_FR.cnf  C170_FR.txt  C171_FR.cnf  C171_FR.txt  C202_FS.cnf  C202_FS.txt  C202_FW.cnf  C202_FW.txt  C203_FCL.cnf  C203_FCL.txt  C203_FS.cnf  C203_FS.txt  C203_FW.cnf  C203_FW.txt  C208_FA.cnf  C208_FA.txt  C208_FC.cnf  C208_FC.txt  C209_FA.cnf  C209_FA.txt  C209_FC.cnf  C209_FC.txt  C210_FS.cnf  C210_FS.txt  C210_FVF.cnf  C210_FVF.txt  (+24 more)
test/benchmark/pmc/Handmade/LatinSquare/: qg1-08.cnf  qg2-07.cnf  qg2-08.cnf  qg4-09.cnf  qg5-11.cnf  qg6-09.cnf  qg7-13.cnf
test/benchmark/pmc/Handmade/parity/: par32-1-c.cnf  par32-1.cnf  par32-2-c.cnf  par32-2.cnf  par32-3-c.cnf  par32-3.cnf  par32-4-c.cnf  par32-4.cnf  par32-5-c.cnf  par32-5.cnf
test/benchmark/pmc/Handmade/pigeon/: fphp-010-020.cnf  fphp-010-020.txt  fphp-015-020.cnf
test/benchmark/pmc/Logistics/: log-1.cnf  log-1.txt  log-2.cnf  log-3.cnf  log-3.txt  log-4.cnf  log-5.cnf  log-5.txt  logistics.a.txt  logistics.b.txt  logistics.c.txt
test/benchmark/pmc/Network/: sat-grid-pbl-0010.cnf  sat-grid-pbl-0010.txt  sat-grid-pbl-0015.cnf  sat-grid-pbl-0020.cnf  sat-grid-pbl-0025.cnf  sat-grid-pbl-0030.cnf
test/benchmark/pmc/Network/Ace/: blockmap_05_02.net.cnf  blockmap_05_02.net.txt  blockmap_05_03.net.cnf  blockmap_05_03.net.txt  blockmap_10_01.net.cnf  blockmap_10_01.net.txt  blockmap_10_02.net.cnf  blockmap_10_02.net.txt  blockmap_10_03.net.cnf  blockmap_10_03.net.txt  blockmap_15_01.net.cnf  blockmap_15_01.net.txt  blockmap_15_02.net.cnf  blockmap_15_02.net.txt  blockmap_15_03.net.cnf  blockmap_15_03.net.txt  blockmap_20_01.net.cnf  blockmap_20_01.net.txt  blockmap_20_02.net.cnf  blockmap_20_02.net.txt  blockmap_20_03.net.cnf  blockmap_20_03.net.txt  blockmap_22_01.net.cnf  blockmap_22_01.net.txt  blockmap_22_02.net.cnf  blockmap_22_02.net.txt  blockmap_22_03.net.cnf  blockmap_22_03.net.txt  fs-01.net.cnf  fs-07.net.cnf  fs-10.net.cnf  fs-13.net.cnf  fs-16.net.cnf  fs-19.net.cnf  fs-22.net.cnf  (+12 more)
test/benchmark/pmc/Planning/: 4step.cnf  5step.cnf  bw_large.d.cnf  prob001.pddl.cnf  prob002.pddl.cnf  prob002.pddl.txt  prob003.pddl.cnf  prob004-log-a.cnf  prob004-log-a.txt  prob004.pddl.cnf  prob004.pddl.txt  prob005.pddl.cnf  prob012.pddl.cnf  prob012.pddl.txt  tire-1.cnf  tire-1.txt  tire-2.cnf  tire-2.txt  tire-3.cnf  tire-3.txt  tire-4.cnf  tire-4.txt
test/benchmark/pmc/bmc/: bmc-galileo-8.txt  bmc-galileo-9.txt  bmc-ibm-1.txt  bmc-ibm-10.txt  bmc-ibm-11.cnf  bmc-ibm-11.txt  bmc-ibm-12.cnf  bmc-ibm-12.txt  bmc-ibm-13.cnf  bmc-ibm-2.txt  bmc-ibm-3.txt  bmc-ibm-4.txt  bmc-ibm-5.txt  cnt06.shuffled.cnf  cnt07.shuffled.cnf  cnt08.shuffled.cnf  cnt09.shuffled.cnf  cnt10.shuffled.cnf
test/benchmark/pmc/circuit/: 3bitadd_32.cnf  alu2_gr_rcs_w8.shuffled.cnf  c880_gr_rcs_w7.shuffled.cnf
test/benchmark/pmc/random/: wff.3.75.315.cnf  wff.4.100.500.txt
test/helpers/: __init__.py  htmlresume.py  inputhelper.py  processcall.py  pycolortermhelp.py  sharpsathelper.py
test/res/: cnflist.txt  modelcounts.txt
(+1531 files in other folders)
